CF1-213 Swagger docs Add survey-data documentation
